Fixed page jumping on modal open
Fixed page jumping to the right on modal open

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -893,10 +893,6 @@ button.close {
     -webkit-appearance: none
 }
 
-.modal-open {
-    overflow: hidden
-}
-
 .modal-open .modal {
     overflow-x: hidden;
     overflow-y: auto
